--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "formularioweb",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Guevara Diego",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
